fix: pr reported points covered

--- a/admin/assets/src/common/common.scss
+++ b/admin/assets/src/common/common.scss
@@ -127,17 +127,17 @@
 	padding-right: 2rem;
 }
 
-.ast-box-shadow-none {
-	box-shadow: none !important;
+.ast-kb-inner-wrap .ast-box-shadow-none {
+	box-shadow: none;
 }
 
-.ast-docs-search-fields {
-	padding: 9px 0!important;
-	padding-left: 2.875rem!important;
-	border: 1px solid #CBD5E1!important;
-	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05)!important;
-	border-radius: 6px!important;
-	line-height: 1.625rem!important;
+.ast-kb-inner-wrap .ast-docs-search-fields {
+	padding: 9px 0;
+	padding-left: 2.875rem;
+	border: 1px solid #CBD5E1;
+	box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.05);
+	border-radius: 6px;
+	line-height: 1.625rem;
 }
 .ast-docs-search-fields[type="search"]::-webkit-search-cancel-button {
 	height: 1em;
