--- a/admin/assets/src/common/skeleton/Common.scss
+++ b/admin/assets/src/common/skeleton/Common.scss
@@ -58,15 +58,3 @@
 		transform: translateX(100%);
 	}
 }
-
-/* Need to verify
-.ast-skeleton-withChildren > * {
-	visibility: hidden;
-}
-.ast-skeleton-fitContent {
-	max-width: -moz-fit-content;
-}
-.ast-skeleton-heightAuto {
-	height: auto;
-}
-*/
